# campus-resume-analyzer

./: .gitignore  README.md  requirements.txt
backend/: Cargo.toml  README.md  campus_resume.db  requirements.txt  run_server.bat
backend/app/: database.py  main.py  models.py  resume_parser.py
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: About.jsx  Analyze.jsx  History.jsx  Login.jsx  Upload.jsx
frontend/src/services/: api.js
