[package]
name = "resume-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
uuid = { version = "1.4", features = ["v4"] }
lazy_static = "1.4" 